# dqx-utility

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  version.json
src/: AppContext.cpp  AppContext.hpp  Application.cpp  Application.hpp  CMakeLists.txt  DQXClarityLauncher.cpp  DQXClarityLauncher.hpp  DQXClarityService.cpp  DialogState.hpp  DialogWindow.cpp  DialogWindow.hpp  ErrorDialog.cpp  FontManager.cpp  FontManager.hpp  IconUtils.hpp  ProcessDetector.cpp  ProcessDetector.hpp  ProcessLocaleChecker.cpp  ProcessLocaleChecker.hpp  SettingsPanel.cpp  SettingsPanel.hpp  UITheme.cpp  UITheme.hpp  WindowRegistry.cpp  WindowRegistry.hpp  WineDetector.cpp  app.rc  diagnose_hook.cpp  dialog_hook_test.cpp  main.cpp
src/app/: Application.cpp  Application.hpp  Version.hpp.in  app.rc.in
src/config/: ConfigManager.cpp  ConfigManager.hpp  DefaultWindowManager.cpp  DefaultWindowManager.hpp  StateSerializer.cpp  StateSerializer.hpp  WindowStateApplier.cpp  WindowStateApplier.hpp  WindowStateOperations.cpp  WindowStateOperations.hpp
src/dqxclarity/: CMakeLists.txt  main.cpp
src/dqxclarity/api/: corner_text.hpp  dialog_message.hpp  dialog_stream.hpp  dqxclarity.cpp  dqxclarity.hpp  player_info.hpp  quest_message.hpp
src/dqxclarity/console/: ConsoleFactory.cpp  ConsoleFactory.hpp  ConsoleNull.hpp  IConsoleSink.hpp
src/dqxclarity/hooking/: Codegen.cpp  Codegen.hpp  CornerTextHook.cpp  CornerTextHook.hpp  DialogHook.cpp  DialogHook.hpp  HookBase.cpp  HookBase.hpp  HookCreateInfo.hpp  HookGuardian.cpp  HookGuardian.hpp  HookManager.cpp  HookManager.hpp  HookRegistry.cpp  HookRegistry.hpp  IHook.hpp  IntegrityDetour.cpp  IntegrityDetour.hpp  IntegrityHook.cpp  IntegrityHook.hpp  IntegrityMonitor.cpp  IntegrityMonitor.hpp  NetworkTextHook.cpp  NetworkTextHook.hpp  PlayerHook.cpp  PlayerHook.hpp  QuestHook.cpp  QuestHook.hpp
src/dqxclarity/memory/: DialogMemoryReader.cpp  DialogMemoryReader.hpp  IProcessMemory.hpp  LinuxMemory.cpp  LinuxMemory.hpp  MemoryFactory.cpp  MemoryFactory.hpp  MemoryPatch.cpp  (+3 more)
src/ipc/: TextSourceClient.cpp  TextSourceClient.hpp
src/log/: Utf8FileFormatter.hpp
src/monster/: MonsterInfo.hpp  MonsterManager.cpp  MonsterManager.hpp
src/platform/: PlatformSetup.cpp  PlatformSetup.hpp  ProcessDetector.cpp  ProcessDetector.hpp  ProcessLocaleChecker.cpp  ProcessUtils.cpp  ProcessUtils.hpp  SingleInstanceGuard.cpp  SingleInstanceGuard.hpp  WineDetector.cpp  WineDetector.hpp
src/processing/: Diagnostics.cpp  Diagnostics.hpp  GlossaryManager.cpp  GlossaryManager.hpp  IFuzzyMatcher.hpp  ITextNormalizer.hpp  JapaneseFuzzyMatcher.cpp  JapaneseFuzzyMatcher.hpp  JapaneseTextDetector.cpp  JapaneseTextDetector.hpp  LabelPatterns.hpp  LabelProcessor.cpp  LabelProcessor.hpp  LabelRegistry.cpp  LabelRegistry.hpp  NFKCTextNormalizer.cpp  NFKCTextNormalizer.hpp  StageRunner.hpp  TextNormalizer.cpp  TextNormalizer.hpp  TextPipeline.cpp  TextPipeline.hpp  TextProcessingTypes.hpp  TextUtils.cpp  TextUtils.hpp  UnknownLabelRepository.cpp  UnknownLabelRepository.hpp
src/quest/: QuestManager.cpp  QuestManager.hpp
src/services/: DQXClarityLauncher.cpp  DQXClarityLauncher.hpp  DQXClarityService.cpp  DQXClarityService.hpp  QuestManagerService.cpp  QuestManagerService.hpp
src/state/: ContentState.hpp  DialogStateManager.hpp  IPCConfig.hpp  QuestHelperStateManager.hpp  QuestStateManager.hpp  TranslationConfig.hpp  UIState.hpp
src/translate/: ApiKeys.h.in  FreeLLMTranslator.cpp  FreeLLMTranslator.hpp  GoogleTranslator.cpp  GoogleTranslator.hpp  HttpCommon.cpp  ILLMTranslator.cpp  ILLMTranslator.hpp  ITranslator.hpp  LabelProcessor.cpp  LabelProcessor.hpp  NiutransTranslator.cpp  NiutransTranslator.hpp  OpenAITranslator.cpp  OpenAITranslator.hpp  QwenMTTranslator.cpp  QwenMTTranslator.hpp  TranslateSession.hpp  TranslationConfig.hpp  TranslationRequestBuilder.cpp  TranslationRequestBuilder.hpp  TranslatorConfigBuilder.cpp  TranslatorFactory.cpp  TranslatorFactoryStub.cpp  TranslatorHelpers.hpp  UnknownLabelRepository.cpp  UnknownLabelRepository.hpp  YoudaoTranslator.cpp  YoudaoTranslator.hpp  ZhipuGLMTranslator.cpp  ZhipuGLMTranslator.hpp
src/ui/: AppContext.cpp  AppContext.hpp  AppModeManager.cpp  AppModeManager.hpp  CommonUIComponents.hpp  DialogSettingsView.cpp  DialogSettingsView.hpp  DialogWaitAnimation.cpp  DialogWindow.cpp  DialogWindow.hpp  DockState.cpp  DockState.hpp  EntityAnnotation.cpp  EntityAnnotation.hpp  ErrorDialog.cpp  ErrorDialog.hpp  FontManager.cpp  FontManager.hpp  GlobalSettingsPanel.cpp  GlobalSettingsPanel.hpp  GlobalStateManager.cpp  GlobalStateManager.hpp  Localization.cpp  Localization.hpp  MiniModeManager.cpp  MiniModeManager.hpp  SettingsPanel.cpp  SettingsPanel.hpp  UIEventHandler.cpp  UIEventHandler.hpp  UIHelper.cpp  UIHelper.hpp  UITheme.cpp  UITheme.hpp  WindowAnimator.cpp  WindowAnimator.hpp  WindowRegistry.cpp  WindowRegistry.hpp
src/updater/: BackupManager.cpp  BackupManager.hpp  ConfigMerger.cpp  ConfigMerger.hpp  GitHubReleaseChecker.cpp  GitHubReleaseChecker.hpp  ManifestParser.cpp  ManifestParser.hpp  PackageDownloader.cpp  PackageDownloader.hpp  UpdateApplier.cpp  UpdateApplier.hpp  UpdateTypes.hpp  UpdaterService.cpp  UpdaterService.hpp  Version.cpp  Version.hpp
src/utils/: CrashHandler.cpp  CrashHandler.hpp  ErrorReporter.cpp  ErrorReporter.hpp  HttpCommon.cpp  HttpCommon.hpp  LRUCache.hpp  LogManager.cpp  LogManager.hpp  NativeMessageBox.cpp  NativeMessageBox.hpp  PendingQueue.hpp  Profile.hpp  ZipExtractor.cpp  ZipExtractor.hpp
tests/: CMakeLists.txt  test_glossary_fuzzy_integration.cpp  test_icu_normalizer.cpp  test_japanese_fuzzy_matcher.cpp  test_label_processor.cpp  test_label_registry.cpp  test_main.cpp  test_monster_manager.cpp  test_nfkc_normalizer.cpp  test_text_processing.cpp  test_utf8proc_normalizer.cpp
tests/dqxclarity/: test_hook_registry.cpp  test_memory.cpp  test_pattern_scanner.cpp  test_process_finder.cpp
tests/translate/: test_google_translator.cpp  test_openai_translator.cpp  test_translator_factory.cpp
tests/utils/: mock_http.cpp  mock_http.hpp
(+123 files in other folders)
